adding new pages for ecommerce website

--- a/product1.html
+++ b/product1.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details - All watches</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .detail-buton{
+            font-size: 20px;
+            text-decoration: none;
+            text-transform: capitalize;
+            color: black;
+            font-weight: 500;
+        }
+    </style>
 </head>
 <body>
     
@@ -14,12 +23,14 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy 5.png" alt="Tissot Watch">
+                <a href="/TissotWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Tissot New Model</h1>
                 <p class="product-description">Tissot Watch is a renowned Japanese brand known for its innovative, eco-friendly timepieces, blending precision, durability, and elegant design.</p>
                 <p class="product-price">$9,899</p>
                 <button id="add-to-cart" class="primary-btn" onclick="addToCart('Tissot watch', 9809)">Add to Cart</button>
+
             </div>
         </div>
     </section>
@@ -29,6 +40,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy 2.png" alt="Citizen Watch">
+                <a href="/citizenWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>citizen New Model</h1>
@@ -44,6 +56,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy 4.png" alt="Geneve Watch">
+                <a href="/geneveWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Geneve New Model</h1>
@@ -59,6 +72,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/watches_PNG9886.png" alt="Quartz Casio Watch">
+                <a href="/quartzWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Quartz Casio</h1>
@@ -77,6 +91,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy 6.png" alt="Rado Watch">
+                <a href="/radoWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Rado Decent Model</h1>
@@ -91,6 +106,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy.png" alt="Golden Watch">
+                <a href="/goldenWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Golden Fancy Model</h1>
@@ -105,6 +121,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy 7.png" alt="Cartier Watch">
+                <a href="/cartierWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Cartier Fancy Model</h1>
@@ -123,6 +140,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image.png" alt="Tissot Watch">
+                <a href="/tissotold.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Tissot old Model</h1>
@@ -138,6 +156,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/image copy 9.png" alt="Cartier Watch">
+                <a href="/fitronWatch.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Fitron Fancy Model</h1>
@@ -154,6 +173,7 @@
         <div class="product-container">
             <div class="product-image">
                 <img src="images/watches_PNG9886.png" alt="Pure Steal Watch">
+                <a href="/puresteal.html" class="detail-buton">Go To Watch Details</a>
             </div>
             <div class="product-info">
                 <h1>Pure Steal Model</h1>
@@ -163,11 +183,6 @@
             </div>
         </div>
     </section>
-
-
-   
-
-    
 
 
 
